--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -96,6 +96,11 @@
     color: @fg_color;
 }
 
+*:selected {
+    background-color: @selected_bg_color;
+    color: @selected_fg_color;
+}
+
 *:selected:focused {
     background-color: @selected_bg_color;
     color: @selected_fg_color;
