Add a more specific selector for entries in toolbars.
The changes in toolbar theming introduced more specific rules that
also happen to match on the entries within, so this new selector
overrules these. Fixes bug #640770, reported by William Jon McCann.

--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -128,7 +128,7 @@
 }
 
 /* Text Entries */
-.entry {
+.entry, .toolbar .entry {
     background-color: #fff;
     background-image: none;
     border-color: #579eea;
