--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -684,7 +684,9 @@ TerminalScreen {
 /* For old gnome-panel */
 PanelWidget,
 PanelApplet,
+PanelMenuBar.menubar,
 PanelToplevel {
     background-color: #1e1a17;
+    background-image: none;
     color: #fff;
 }
