Make epiphany toolbar match again
https://bugzilla.gnome.org/show_bug.cgi?id=641344

--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -421,6 +421,7 @@ column-header {
 
 GtkWindow > GtkTable > .toolbar, /* nautilus */
 GtkWindow > GtkVBox > EggEditableToolbar > GtkHBox > .toolbar, /* eog etc */
+GtkWindow > GtkVBox > GtkVBox > EggEditableToolbar > GtkHBox > .toolbar, /* epiphany */
 GtkWindow > GtkVBox > .toolbar {
     background-image: -gtk-gradient (linear,
 				     left top,
