--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -438,6 +438,7 @@ GtkWindow > GtkVBox > .toolbar {
     border-style: none;
     padding: 4;
     border-width: 0;
+    -GtkWidget-window-dragging: true;
 }
 
 GtkWindow > GtkVBox > EggEditableToolbar > GtkHBox > GtkToolbar .button,
