Make insensitive labels in toolbars readable
Use an alpha version of @fg_color so it's still
readable, but distinguishable from sensitive text.
Fixes bug 640459 - Insensitive text in toolbars is
gray-on-gray, illegible. Reported by Jason Clinton

--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -475,7 +475,11 @@ GtkWindow > GtkVBox > GtkToolbar .button:hover { /* needs correct colors */
 				     color-stop (0.3, shade (@bg_color, 0.9)),
 				     color-stop (0.6, shade (@bg_color, 0.9)),
 				     to (shade (@bg_color, 0.85)));
-  }
+}
+
+.toolbar *:insensitive {
+    color: alpha (@fg_color, 0.6);
+}
 
 GtkWindow > GtkVBox > EggEditableToolbar > GtkHBox > GtkToolbar .button:active, GtkToolbar .button:active:prelight,
 GtkWindow > GtkVBox > GtkToolbar .button:active, GtkToolbar .button:active:prelight { /* needs correct colors */
