Fix to correctly theme applets handles
https://bugzilla.gnome.org/show_bug.cgi?id=643027

--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -734,6 +734,7 @@ TerminalScreen {
 /* For old gnome-panel */
 PanelWidget,
 PanelApplet,
+PanelAppletFrame,
 PanelMenuBar.menubar,
 PanelToplevel {
     background-color: @chrome_bg_color;
