combobox: use the arrow-spacing property

--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -197,6 +197,10 @@ GtkSpinButton.button:active {
     padding: 0;
 }
 
+GtkComboBox {
+    -GtkComboBox-arrow-scaling: 0.5;
+}
+
 GtkFrame,
 GtkCalendar,
 GtkScale {
